// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressFab renders component 1`] = `
<WithStyles(ForwardRef(IconButton))
  classes={
    Object {
      "root": "makeStyles-root-1",
    }
  }
>
  <Icon />
</WithStyles(ForwardRef(IconButton))>
`;

exports[`ProgressFab renders with passed components 1`] = `
<WithStyles(ForwardRef(IconButton))
  classes={
    Object {
      "root": "makeStyles-root-1",
    }
  }
  onClick={[MockFunction]}
>
  <Icon />
</WithStyles(ForwardRef(IconButton))>
`;
